--- a/SP05/SP05 - EX 05/indexGet.css
+++ b/SP05/SP05 - EX 05/indexGet.css
@@ -15,7 +15,6 @@ span {
     margin-bottom: 10px;
 }
 
-
-.cliente, .loja, .empresa {
+.dadosCliente, .cliente, .loja, .empresa {
     height: 400px;
 }
